SERVER-17807: reset state before starting intial sync attempt